# Checklist

./: CMakeLists.txt  Display.cpp  ListItem.cpp  ListItem.h  Task.cpp  Task.h  TaskCollection.cpp  TaskCollection.h  TaskList.cpp  TaskList.h  Tasks.cpp  Tasks.h  Version.h  main.cpp
test/: CMakeLists.txt  TaskFixture.cpp
test/lib/googletest/make/: Makefile
